Fix footer link alignment in large screens

--- a/style.css
+++ b/style.css
@@ -374,6 +374,10 @@ footer {
     align-items: center;
   }
 
+  .nav-link {
+    text-align: left;
+  }
+
   .hero {
     padding: 7rem 0 10rem;
   }
